WIP try to add subject ID to top bar

--- a/src/components/core/App/template.html
+++ b/src/components/core/App/template.html
@@ -42,6 +42,7 @@
           <span v-if="landingVisible" key="if-landingVisible">Go to app</span>
           <span v-else key="if-landingVisible">Back to landing page</span>
         </v-tooltip>
+        <v-app-bar-title>TODO</v-app-bar-title>
         <v-spacer />
         <v-toolbar-items>
           <v-btn
