TODO siplay remote file name in top bar

--- a/src/components/core/App/template.html
+++ b/src/components/core/App/template.html
@@ -42,7 +42,7 @@
           <span v-if="landingVisible" key="if-landingVisible">Go to app</span>
           <span v-else key="if-landingVisible">Back to landing page</span>
         </v-tooltip>
-        <v-app-bar-title>{{glanceFileName}}</v-app-bar-title>
+        <v-app-bar-title>{{fileName}}</v-app-bar-title>
         <v-spacer />
         <v-toolbar-items>
           <v-btn
