display entire glance file name if space available

--- a/src/components/core/App/template.html
+++ b/src/components/core/App/template.html
@@ -42,7 +42,11 @@
           <span v-if="landingVisible" key="if-landingVisible">Go to app</span>
           <span v-else key="if-landingVisible">Back to landing page</span>
         </v-tooltip>
-        <v-app-bar-title>{{glanceFileName}}</v-app-bar-title>
+        <v-toolbar-title 
+          style="margin-left: 8px; flex-grow: 1;"
+        >
+          {{glanceFileName}}
+        </v-toolbar-title>
         <v-spacer />
         <v-toolbar-items>
           <v-btn
