removed file extension from header and 'upload to girder' button

--- a/src/components/core/Datasets/template.html
+++ b/src/components/core/Datasets/template.html
@@ -54,9 +54,9 @@
             <v-list-item v-on:click="deleteDataset(sourceId)">
               <v-list-item-title>Delete</v-list-item-title>
             </v-list-item>
-            <v-list-item v-on:click="uploadDataset(sourceId)">
+            <!-- <v-list-item v-on:click="uploadDataset(sourceId)">
               <v-list-item-title>Upload To Girder</v-list-item-title>
-            </v-list-item>
+            </v-list-item> -->
           </v-list>
         </v-menu>
       </div>
